--- a/templates/landing.html
+++ b/templates/landing.html
@@ -39,86 +39,89 @@
     <body>
         <div class="navbar navbar-default" role="navigation">
             <div class="container">
-            <div class="header col-sm-12 col-md-12 col-lg-12">
-                <div class="background col-xs-12 col-sm-8 col-md-8 col-lg-11 col-lg-push-1">
-                    <h1 class="stretch"><a class="brand" href="#">Niqels</a></h1>
-                </div><!-- .background -->
+                <div class="header col-sm-12 col-md-12 col-lg-12">
+                    <div class="background col-xs-12 col-sm-8 col-md-8 col-lg-11 col-lg-push-1">
+                        <h1 class="stretch"><a class="brand" href="#">Niqels</a></h1>
+                    </div><!-- .background -->
 
-                <div class="collapse navbar-collapse">
-                    <ul class="nav nav-pills col-sm-4 col-sm-push-7 col-md-3 col-lg-5 navigation">
-                        <li data-slide="2"><a href="#">Sobre</a></li>
-                        <li><a href="{% url "login" %}">Login</a></li>
-                    </ul>
-                </div>
-                <div class="navbar-header col-xs-12 col-xs-pull-3">
-                    <button type="button" class="navbar-toggle " data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                </div> <!-- .navbar-header -->
-            </div> <!-- .header -->
+                    <div class="collapse navbar-collapse">
+                        <ul class="nav nav-pills col-sm-4 col-sm-push-7 col-md-3 col-lg-5 navigation">
+                            <li data-slide="2"><a href="#">Sobre</a></li>
+                            <li><a href="{% url "login" %}">Login</a></li>
+                            <li><a id="register-link" href="{% url "register" %}">Create account</a></li>
+                        </ul>
+                    </div>
+                    <div class="navbar-header col-xs-12 col-xs-pull-3">
+                        <button type="button" class="navbar-toggle " data-toggle="collapse" data-target=".navbar-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div> <!-- .navbar-header -->
+                </div> <!-- .header -->
             </div>
         </div> <!-- .navbar.navbar-default -->
            
-        <div class="well">
-            <h1>Assessor financeiro pessoal. <span>Online e grátis.</span></h1>
-            <p class="lead lead-custom">
-                Acompanhe suas despesas online, com relatórios simplificados no seu computador, tablet ou celular.
-            </p>
+        <div id="main" class="well">
+            <div class="title">
+                <h1>Assessor financeiro pessoal. <span>Online e grátis.</span></h1>
+                <p class="lead lead-custom">
+                    Acompanhe suas despesas online, com relatórios simplificados no seu computador, tablet ou celular.
+                </p>
+            </div>
             <div class="panel-group container" id="features">
-                <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a>Organize seus gastos <i class="icon-tags"></i></a>
-                        </h4>
-                    </div><!-- .panel-heading -->
+                <div class="panel-wrapper">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a>Organize seus gastos <i class="icon-tags"></i></a>
+                            </h4>
+                        </div><!-- .panel-heading -->
 
-                    <div class="panel-body">
-                        Saiba exatamente para onde seu dinheiro está indo e quais gastos estão atrapalhando seus objetivos financeiros.
-                    </div><!-- .panel-body -->
-                </div><!-- .panel.panel-default -->
+                        <div class="panel-body">
+                            Saiba exatamente para onde seu dinheiro está indo e quais gastos estão atrapalhando seus objetivos financeiros.
+                        </div><!-- .panel-body -->
+                    </div><!-- .panel.panel-default -->
                 </div>
 
-                <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a>
-                                Acompanhe sua evolução  <i class="icon-thumbs-up-alt"></i>
-                            </a>
-                        </h4>
-                    </div><!-- .panel-heading -->
+                <div class="panel-wrapper">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a>
+                                    Acompanhe sua evolução  <i class="icon-thumbs-up-alt"></i>
+                                </a>
+                            </h4>
+                        </div><!-- .panel-heading -->
 
-                    <div class="panel-body">
-                        Saiba se você está no caminho certo para realizar seus objetivos, ou está adiando seus sonhos em troca de gastos
-                        desnecessários.
-                    </div><!-- .panel-body -->
-                </div><!-- .panel.panel-default -->
+                        <div class="panel-body">
+                            Saiba se você está no caminho certo para realizar seus objetivos, ou está adiando seus sonhos em troca de gastos
+                            desnecessários.
+                        </div><!-- .panel-body -->
+                    </div><!-- .panel.panel-default -->
                 </div>
 
-                <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a>
-                                Registre-se agora! <i class="icon-user"></i>
-                            </a>
-                        </h4>
-                    </div><!-- .panel-heading -->
+                <div class="panel-wrapper">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a>
+                                    Registre-se agora! <i class="icon-user"></i>
+                                </a>
+                            </h4>
+                        </div><!-- .panel-heading -->
 
-                    <div class="panel-body">
-                        Registre-se grátis agora e aprenda a controlar seu rico dinheirinho!
-                    </div><!-- .panel-body -->
-                </div><!-- .panel.panel-default -->
+                        <div class="panel-body">
+                            Registre-se grátis agora e aprenda a controlar seu rico dinheirinho!
+                        </div><!-- .panel-body -->
+                    </div><!-- .panel.panel-default -->
                 </div>
 
-                <a class="btn btn-lg btn-warning btn-custom col-sm-4 col-sm-offset-4 col-xs-12" href="/register/">Experimente agora 
+                <a class="btn btn-lg btn-warning btn-custom" href="/register/">Experimente agora 
                     <span class="glyphicon glyphicon-chevron-right"></span>
                 </a>
             </div> <!-- .panel-group-->
-    </div> <!-- .well -->
+        </div> <!-- .well -->
 
         
              <div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
@@ -151,7 +154,6 @@
                                       </div> <!-- .pull-right -->
                               </div>  <!-- .panel-and-img-all -->
                             </div>  <!-- .marketing -->
-              
         
                    </div>  <!-- .container.container-bg-custom -->
               </div>  <!--.slide #slide2-->
