finishing part of landing page

--- a/static/less/landing-vars.less
+++ b/static/less/landing-vars.less
@@ -7,9 +7,9 @@
 // --------------------------------------------------
 
 @white:#ffffff;
-@azul-claro:#BEC1CB;
-@azul-escuro:#282B3A;
-@azul-escuro-lighter:#707383; // azul escuro mais claro
+@azul-claro:#a6a7bf;
+@azul-escuro:#1F214C;
+@azul-escuro-lighter:#4A4C78; // azul escuro mais claro
 @laranja:#BA3500;
 @laranja-dark:#7D2400;
 
@@ -18,10 +18,10 @@
 // -------------------------
 
 @gray-darker:            lighten(#000, 13.5%); // #222
-@gray-dark:              #585b6c;   // #333 azul escuro médio
-@gray:                   #807f88; // #555 - cinza escuro
-@gray-light:             #9a99a0;   // #999 - cinza mais claro
-@gray-lighter:           #E7E6E6; // #eee - azul mais claro
+@gray-dark:              #2b2d5d;   // #333
+@gray:                   #62648f; // #555
+@gray-light:             #807f9f;   // #999
+@gray-lighter:           #E6E4EB; // #eee
 
 
 // Brand colors
