--- a/templates/landing.html
+++ b/templates/landing.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
-        <link rel="shortcut icon" href="/static/landing/ico/favicon.ico">
+        <link rel="shortcut icon" href="{% static "ico/favicon.ico" %}">
     
         <title>Niqels - O seu organizador Financeiro Pessoal</title>
     
@@ -37,28 +37,23 @@
 
     </head>
     <body>
-        <div class="navbar navbar-default" role="navigation">
+        <div class="navbar navbar-default" role="navigation" id="navbar">
             <div class="container">
-                <div class="header col-sm-12 col-md-12 col-lg-12">
-                    <div class="background col-xs-12 col-sm-8 col-md-8 col-lg-11 col-lg-push-1">
-                        <h1 class="stretch"><a class="brand" href="#">Niqels</a></h1>
-                    </div><!-- .background -->
+                <div class="navbar-header">
+                    <a class="" href="#"><img src="{% static "img/niqels-rgb.png" %}" id="logo"></a>
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div> <!-- .navbar-header -->
 
-                    <div class="collapse navbar-collapse">
-                        <ul class="nav nav-pills col-sm-4 col-sm-push-7 col-md-3 col-lg-5 navigation">
-                            <li data-slide="2"><a href="#">Sobre</a></li>
-                            <li><a href="{% url "login" %}">Login</a></li>
-                            <li><a id="register-link" href="{% url "register" %}">Create account</a></li>
-                        </ul>
-                    </div>
-                    <div class="navbar-header col-xs-12 col-xs-pull-3">
-                        <button type="button" class="navbar-toggle " data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div> <!-- .navbar-header -->
-                </div> <!-- .header -->
+                <div class="collapse navbar-collapse" id="navbar-links">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="{% url "login" %}">Login</a></li>
+                        <li><a id="register-link" href="{% url "register" %}">Create account</a></li>
+                    </ul>
+                </div>
             </div>
         </div> <!-- .navbar.navbar-default -->
            
@@ -123,58 +118,54 @@
             </div> <!-- .panel-group-->
         </div> <!-- .well -->
 
-        
-             <div class="slide" id="slide2" data-slide="2" data-stellar-background-ratio="0.5">
-                   <div class="container container-custom col-xs-12 col-md-12 col-md-12 col-lg-12">
-                            <div class="marketing col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                              <div class="panel-and-img-all col-sm-12 col-md-12 col-md-pull-1 col-lg-12">
-                                      <div class="panel-and-img col-xs-12 col-sm-7 col-md-7 col-lg-6 text-left">
-                                          <h2>Organize seus gastos</h2>
-                                          <p><span class="custom-text">Nós ajudamos você</span> a ter a disciplina necessária para <span class="custom-text">organizar suas finanças</span> de um jeito rápido 
-                                          e fácil. Sem cadastros complicados, sem burocracias, sem dificuldades. Você não vai esquecer de cadastrar aquelas
-                                          compras no meio da tarde, que fazem seu dinheiro sumir no fim do mês.</p>
-                                      </div> <!-- .panel-and-img -->
-                                      <div class="img-ilustra-01 pull-right col-sm-5 col-md-5 col-md-push-1 col-lg-5 hidden-xs">
-                                        <img class="img-responsive" src="/static/landing/img/ilustragraf.png" />
-                                      </div> <!-- .pull-right -->
-                              </div> <!-- .panel-and-img-all -->
-                            </div> <!-- .marketing -->
-                            <hr>
-                            <div class="marketing col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                              <div class="panel-and-img-all col-sm-12 col-md-12 col-queixo-12 col-md-pull-1 col-lg-12">
-                                      <div class="panel-and-img texto-inferior-acompanhe col-xs-12 col-sm-7 col-md-7 col-md-offset-1 col-lg-6 text-right pull-right">
-                                          <h2>Acompanhe sua evolução</h2>
-                                          <p>Nós o ajudaremos a <span class="custom-text">atingir suas metas</span> de economia. 
-                                          Para comprar sua casa, seu carro, planejar suas próximas férias ou até sua aposentadora, acompanharemos seu 
-                                          perfil de consumo para você realizar seus sonhos. Você saberá exatamente <span class="custom-text">onde poupar</span> para alcançar seus
-                                          objetivos.</p>
-                                      </div>  <!-- .panel-and-img --> <!-- fechamento de tag reaça -->
-                                      <div class="img-ilustra col-sm-5 col-md-5 col-lg-6 hidden-xs">
-                                        <img class="img-responsive" src="/static/landing/img/ilustra05.png" />
-                                      </div> <!-- .pull-right -->
-                              </div>  <!-- .panel-and-img-all -->
-                            </div>  <!-- .marketing -->
-        
-                   </div>  <!-- .container.container-bg-custom -->
-              </div>  <!--.slide #slide2-->
-              <div class="footer">
-                   <h5 class="text-center">&copy; 2013 Niqels. Todos os direitos reservados.
-                   Site desenvolvido por <a href="http://www.camaleaocriativo.com.br" title="Camaleão Criativo" target="_blank">Camaleão Criativo</a>
-                   </h5>
-              </div>
-        
-            <!-- Bootstrap core JavaScript
-            ==================================================
-            Placed at the end of the document so the pages load faster -->
-            <script src="/static/landing/js/jquery.js"></script>
-            <script src="/static/landing/js/bootstrap.js"></script>
-            <script type="text/javascript" src="/static/landing/js/jquery.stellar.min.js"></script>
-            <script type="text/javascript" src="/static/landing/js/waypoints.min.js"></script>
-            <script type="text/javascript" src="/static/landing/js/jquery.easing.1.3.js"></script>
-            <script type="text/javascript" src="/static/landing/js/scripts.js"></script>
+        <div class="container container-custom col-xs-12 col-md-12 col-md-12 col-lg-12">
+            <div class="marketing col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="panel-and-img-all col-sm-12 col-md-12 col-md-pull-1 col-lg-12">
+                    <div class="panel-and-img col-xs-12 col-sm-7 col-md-7 col-lg-6 text-left">
+                        <h2>Organize seus gastos</h2>
+                        <p>Nós ajudamos você a ter a disciplina necessária para organizar suas finanças de um jeito rápido 
+                        e fácil. Sem cadastros complicados, sem burocracias, sem dificuldades. Você não vai esquecer de cadastrar aquelas
+                        compras no meio da tarde, que fazem seu dinheiro sumir no fim do mês.</p>
+                    </div> <!-- .panel-and-img -->
+                    <div class="img-ilustra-01 pull-right col-sm-5 col-md-5 col-md-push-1 col-lg-5 hidden-xs">
+                        <img class="img-responsive" src="{% static "img/01.png" %}" />
+                    </div> <!-- .pull-right -->
+                </div> <!-- .panel-and-img-all -->
+            </div> <!-- .marketing -->
 
-            {% if USE_GA %}
-                {% include "ga.html" %}
-            {% endif %}
-      </body>
+            <hr>
+
+            <div class="marketing col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="panel-and-img-all col-sm-12 col-md-12 col-queixo-12 col-md-pull-1 col-lg-12">
+                    <div class="panel-and-img texto-inferior-acompanhe col-xs-12 col-sm-7 col-md-7 col-md-offset-1 col-lg-6 text-right pull-right">
+                        <h2>Acompanhe sua evolução</h2>
+                        <p>Nós o ajudaremos a atingir suas metas de economia. 
+                        Para comprar sua casa, seu carro, planejar suas próximas férias ou até sua aposentadora, acompanharemos seu 
+                        perfil de consumo para você realizar seus sonhos. Você saberá exatamente onde poupar para alcançar seus
+                        objetivos.</p>
+                    </div>  <!-- .panel-and-img -->
+                    <div class="img-ilustra col-sm-5 col-md-5 col-lg-6 hidden-xs">
+                        <img class="img-responsive" src="{% static "img/02.png" %}" />
+                    </div> <!-- .pull-right -->
+                </div>  <!-- .panel-and-img-all -->
+            </div>  <!-- .marketing -->
+    
+        </div>  <!-- .container.container-bg-custom -->
+
+        <div class="footer">
+           <h5 class="text-center">&copy; 2013 Niqels. Todos os direitos reservados.
+           Site desenvolvido por <a href="http://www.camaleaocriativo.com.br" title="Camaleão Criativo" target="_blank">Camaleão Criativo</a>
+           </h5>
+        </div>
+        
+        <!-- Bootstrap core JavaScript
+        ==================================================
+        Placed at the end of the document so the pages load faster -->
+        <script src="/static/landing/js/jquery.js"></script>
+        <!-- <script src="/static/landing/js/bootstrap.js"></script> -->
+
+        {% if USE_GA %}
+            {% include "ga.html" %}
+        {% endif %}
+    </body>
 </html>
