--- a/templates/landing.html
+++ b/templates/landing.html
@@ -50,8 +50,8 @@
 
                 <div class="collapse navbar-collapse" id="navbar-links">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="{% url "login" %}">Login</a></li>
-                        <li><a id="register-link" href="{% url "register" %}">Create account</a></li>
+                        <li><a href="{% url "login" %}">{% trans "Login" %}</a></li>
+                        <li><a id="register-link" href="{% url "register" %}">{% trans "Create account" %}</a></li>
                     </ul>
                 </div>
             </div>
