--- a/templates/landing.html
+++ b/templates/landing.html
@@ -65,51 +65,52 @@
                 </p>
             </div>
             <div class="panel-group container" id="features">
-                <div class="panel-wrapper">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a>Organize seus gastos <i class="icon-tags"></i></a>
-                            </h4>
-                        </div><!-- .panel-heading -->
+                <div class="row">
+                    <div class="panel-wrapper">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <img class="img-circle img-thumbnail img-responsive" src="{% static "img/compare.png" %}">
+                                <h4 class="panel-title">
+                                    Organize seus gastos <i class="icon-tags"></i>
+                                </h4>
+                            </div><!-- .panel-heading -->
 
-                        <div class="panel-body">
-                            Saiba exatamente para onde seu dinheiro está indo e quais gastos estão atrapalhando seus objetivos financeiros.
-                        </div><!-- .panel-body -->
-                    </div><!-- .panel.panel-default -->
-                </div>
+                            <div class="panel-body">
+                                Saiba exatamente para onde seu dinheiro está indo e quais gastos estão atrapalhando seus objetivos financeiros.
+                            </div><!-- .panel-body -->
+                        </div><!-- .panel.panel-default -->
+                    </div>
 
-                <div class="panel-wrapper">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a>
+                    <div class="panel-wrapper">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <img class="img-circle img-thumbnail img-responsive" src="{% static "img/top.png" %}">
+                                <h4 class="panel-title">
                                     Acompanhe sua evolução  <i class="icon-thumbs-up-alt"></i>
-                                </a>
-                            </h4>
-                        </div><!-- .panel-heading -->
+                                </h4>
+                            </div><!-- .panel-heading -->
 
-                        <div class="panel-body">
-                            Saiba se você está no caminho certo para realizar seus objetivos, ou está adiando seus sonhos em troca de gastos
-                            desnecessários.
-                        </div><!-- .panel-body -->
-                    </div><!-- .panel.panel-default -->
-                </div>
+                            <div class="panel-body">
+                                Saiba se você está no caminho certo para realizar seus objetivos, ou está adiando seus sonhos em troca de gastos
+                                desnecessários.
+                            </div><!-- .panel-body -->
+                        </div><!-- .panel.panel-default -->
+                    </div>
 
-                <div class="panel-wrapper">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a>
+                    <div class="panel-wrapper">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <img class="img-circle img-thumbnail img-responsive" src="{% static "img/balance.png" %}">
+                                <h4 class="panel-title">
                                     Registre-se agora! <i class="icon-user"></i>
-                                </a>
-                            </h4>
-                        </div><!-- .panel-heading -->
+                                </h4>
+                            </div><!-- .panel-heading -->
 
-                        <div class="panel-body">
-                            Registre-se grátis agora e aprenda a controlar seu rico dinheirinho!
-                        </div><!-- .panel-body -->
-                    </div><!-- .panel.panel-default -->
+                            <div class="panel-body">
+                                Registre-se grátis agora e aprenda a controlar seu rico dinheirinho!
+                            </div><!-- .panel-body -->
+                        </div><!-- .panel.panel-default -->
+                    </div>
                 </div>
 
                 <a class="btn btn-lg btn-warning btn-custom" href="/register/">Experimente agora 
