--- a/templates/landing.html
+++ b/templates/landing.html
@@ -68,54 +68,100 @@
                 <div class="row">
                     <div class="panel-wrapper">
                         <div class="panel panel-default">
+
                             <div class="panel-heading">
                                 <img class="img-circle img-thumbnail img-responsive" src="{% static "img/compare.png" %}">
+
                                 <h4 class="panel-title">
-                                    Organize seus gastos <i class="icon-tags"></i>
+                                    Fácil de usar
                                 </h4>
                             </div><!-- .panel-heading -->
 
                             <div class="panel-body">
-                                Saiba exatamente para onde seu dinheiro está indo e quais gastos estão atrapalhando seus objetivos financeiros.
+                                Esqueça as planilhas complicadas! Controle suas finanças com facilidade, leva apenas alguns segundos para cadastrar suas movimentações.
                             </div><!-- .panel-body -->
                         </div><!-- .panel.panel-default -->
                     </div>
 
                     <div class="panel-wrapper">
                         <div class="panel panel-default">
+
                             <div class="panel-heading">
                                 <img class="img-circle img-thumbnail img-responsive" src="{% static "img/top.png" %}">
+
                                 <h4 class="panel-title">
-                                    Acompanhe sua evolução  <i class="icon-thumbs-up-alt"></i>
+                                    Veja seu histórico
                                 </h4>
                             </div><!-- .panel-heading -->
 
                             <div class="panel-body">
-                                Saiba se você está no caminho certo para realizar seus objetivos, ou está adiando seus sonhos em troca de gastos
-                                desnecessários.
+                                Compare sua situação financeira atual com o passado, saiba quando é hora de economizar.
                             </div><!-- .panel-body -->
                         </div><!-- .panel.panel-default -->
                     </div>
 
+                    <div class="row-break sm"></div>
+
                     <div class="panel-wrapper">
                         <div class="panel panel-default">
+
                             <div class="panel-heading">
                                 <img class="img-circle img-thumbnail img-responsive" src="{% static "img/balance.png" %}">
                                 <h4 class="panel-title">
-                                    Registre-se agora! <i class="icon-user"></i>
+                                    Use nosso aplicativo Android
                                 </h4>
                             </div><!-- .panel-heading -->
 
                             <div class="panel-body">
-                                Registre-se grátis agora e aprenda a controlar seu rico dinheirinho!
+                                Use nosso sistema com uma interface voltada para mobiles com nosso aplicativo Android disponível no market aqui: link
                             </div><!-- .panel-body -->
                         </div><!-- .panel.panel-default -->
                     </div>
-                </div>
 
-                <a class="btn btn-lg btn-warning btn-custom" href="/register/">Experimente agora 
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                </a>
+                    <div class="row-break md lg"></div>
+
+                    <div class="panel-wrapper">
+                        <div class="panel panel-default">
+
+                            <div class="panel-heading">
+                                <img class="img-circle img-thumbnail img-responsive" src="{% static "img/balance.png" %}">
+                                <h4 class="panel-title">
+                                    Controle suas finanças
+                                </h4>
+                            </div><!-- .panel-heading -->
+
+                            <div class="panel-body">
+                                Nós fornecemos relatórios para dar uma visão geral de suas finanças, ajudando a entender onde você gasta mais, e onde economizar.
+                            </div><!-- .panel-body -->
+
+                        </div><!-- .panel.panel-default -->
+                    </div>
+
+                    <div class="panel-wrapper">
+                        <div class="panel panel-default">
+
+                            <div class="panel-heading">
+                                <img class="img-circle img-thumbnail img-responsive" src="{% static "img/balance.png" %}">
+
+                                <h4 class="panel-title">
+                                    Crie sua conta - é gratis!
+                                </h4>
+                            </div><!-- .panel-heading -->
+
+                            <div class="panel-body">
+                                O cadastro leva apenas alguns instantes, crie sua conta gratuitamente e começe a usar!
+                            </div><!-- .panel-body -->
+                        </div><!-- .panel.panel-default -->
+                    </div>
+
+
+                </div> <!-- row -->
+
+                <div class="row">
+                    <a id="register-button" class="btn btn-lg btn-warning btn-custom" href="/register/">Experimente agora 
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </a>
+                </div>
             </div> <!-- .panel-group-->
         </div> <!-- .well -->
 
