--- a/templates/landing.html
+++ b/templates/landing.html
@@ -41,7 +41,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <a class="" href="#"><img src="{% static "img/niqels-rgb.png" %}" id="logo"></a>
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-links">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -58,19 +58,26 @@
         </div> <!-- .navbar.navbar-default -->
            
         <div id="main" class="well">
-            <div class="title">
+            <div id="title">
                 <h1>Assessor financeiro pessoal. <span>Online e grátis.</span></h1>
                 <p class="lead lead-custom">
                     Acompanhe suas despesas online, com relatórios simplificados no seu computador, tablet ou celular.
                 </p>
             </div>
             <div class="panel-group container" id="features">
+
+                <div class="row">
+                    <a id="register-button" class="btn btn-lg btn-warning btn-custom" href="/register/">Experimente agora 
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </a>
+                </div>
+
                 <div class="row">
                     <div class="panel-wrapper">
                         <div class="panel panel-default">
 
                             <div class="panel-heading">
-                                <img class="img-circle img-thumbnail img-responsive" src="{% static "img/compare.png" %}">
+                                <img class="img-circle img-thumbnail img-responsive" src="{% static "img/thumbnails/categories.png" %}">
 
                                 <h4 class="panel-title">
                                     Fácil de usar
@@ -78,7 +85,7 @@
                             </div><!-- .panel-heading -->
 
                             <div class="panel-body">
-                                Esqueça as planilhas complicadas! Controle suas finanças com facilidade, leva apenas alguns segundos para cadastrar suas movimentações.
+                                Esqueça as planilhas! Controle suas finanças com facilidade, leva apenas alguns segundos para cadastrar suas movimentações.
                             </div><!-- .panel-body -->
                         </div><!-- .panel.panel-default -->
                     </div>
@@ -87,7 +94,7 @@
                         <div class="panel panel-default">
 
                             <div class="panel-heading">
-                                <img class="img-circle img-thumbnail img-responsive" src="{% static "img/top.png" %}">
+                                <img class="img-circle img-thumbnail img-responsive" src="{% static "img/thumbnails/balance.png" %}">
 
                                 <h4 class="panel-title">
                                     Veja seu histórico
@@ -106,7 +113,7 @@
                         <div class="panel panel-default">
 
                             <div class="panel-heading">
-                                <img class="img-circle img-thumbnail img-responsive" src="{% static "img/balance.png" %}">
+                                <img class="img-circle img-thumbnail img-responsive" src="{% static "img/thumbnails/android-logo.png" %}">
                                 <h4 class="panel-title">
                                     Use nosso aplicativo Android
                                 </h4>
@@ -124,7 +131,7 @@
                         <div class="panel panel-default">
 
                             <div class="panel-heading">
-                                <img class="img-circle img-thumbnail img-responsive" src="{% static "img/balance.png" %}">
+                                <img class="img-circle img-thumbnail img-responsive" src="{% static "img/thumbnails/compare.png" %}">
                                 <h4 class="panel-title">
                                     Controle suas finanças
                                 </h4>
@@ -141,7 +148,7 @@
                         <div class="panel panel-default">
 
                             <div class="panel-heading">
-                                <img class="img-circle img-thumbnail img-responsive" src="{% static "img/balance.png" %}">
+                                <img class="img-circle img-thumbnail img-responsive" src="{% static "img/logo-squared.png" %}">
 
                                 <h4 class="panel-title">
                                     Crie sua conta - é gratis!
@@ -157,11 +164,6 @@
 
                 </div> <!-- row -->
 
-                <div class="row">
-                    <a id="register-button" class="btn btn-lg btn-warning btn-custom" href="/register/">Experimente agora 
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                    </a>
-                </div>
             </div> <!-- .panel-group-->
         </div> <!-- .well -->
 
@@ -209,7 +211,7 @@
         ==================================================
         Placed at the end of the document so the pages load faster -->
         <script src="/static/landing/js/jquery.js"></script>
-        <!-- <script src="/static/landing/js/bootstrap.js"></script> -->
+        <script src="/static/landing/js/bootstrap.js"></script>
 
         {% if USE_GA %}
             {% include "ga.html" %}
